--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "all": "^0.0.0",
     "axios": "^0.21.1",
     "history": "4.10.1",
