--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "all": "^0.0.0",
     "axios": "^0.21.1",
     "history": "4.10.1",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
