--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux-saga": "^1.1.3",
     "rodal": "^1.8.1",
     "styled-components": "^5.2.1",
+    "styled-content-loader": "^1.2.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
